Agentforce/force-app/main/default/objects/Website_Page_View__c/Website_Page_View__c.object-meta.xml
<CustomObject>
    <label>Website Page View</label>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Website Page Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>