Agentforce/force-app/main/default/objects/Website_Page_View__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Website Page Views</relationshipLabel>
    <relationshipName>Website_Page_Views</relationshipName>
    <type>Lookup</type>
</CustomField>