Agentforce/force-app/main/default/objects/Website_Page_View__c/fields/View_Start__c.field-meta.xml
<CustomField>
    <fullName>View_Start__c</fullName>
    <label>View Start</label>
    <type>DateTime</type>
</CustomField>