Agentforce/force-app/main/default/objects/Website_Page_View__c/fields/Visit_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_ID__c</fullName>
    <formula>Website_Visit__r.Visit_ID__c</formula>
    <inlineHelpText>Lead Forensics Visit ID</inlineHelpText>
    <label>Visit ID</label>
    <type>Text</type>
</CustomField>