Agentforce/force-app/main/default/objects/Website_Page_View__c/fields/Website_Visit__c.field-meta.xml
<CustomField>
    <fullName>Website_Visit__c</fullName>
    <label>Website Visit</label>
    <referenceTo>Website_Visit__c</referenceTo>
    <relationshipLabel>Website Page Views</relationshipLabel>
    <relationshipName>Website_Page_Views</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>